searchbar overflow fix

--- a/react-app/src/components/Blank/Blank.css
+++ b/react-app/src/components/Blank/Blank.css
@@ -1,5 +1,5 @@
 .Blank{
-    background-color: rgba(161, 198, 223, 0.436);
+    /* background-color: rgba(161, 198, 223, 0.436); */
     /* width: 300px; */
     /* border: 4px black solid; */
     height: 100%;
