--- a/react-app/src/components/searchBar.css
+++ b/react-app/src/components/searchBar.css
@@ -9,7 +9,7 @@
     background: white;
     position: fixed;
     z-index: 3;
-    width: 16vw;
-    border: 1px black solid
-
+    max-width: 13.725vw;
+    border: 1px black solid;
+    overflow:hidden;
 }
